--- a/STA 325 Project Proposal.Rmd
+++ b/STA 325 Project Proposal.Rmd
@@ -1,6 +1,12 @@
 ---
 title: "STA 325 Project Proposal"
 author: "Ethan Shen, Steven Herrera, Malavi Ravindran, Austin Jia"
-date: "10/6/2019"
-output: html_document
+date: "`r format(Sys.time(), '%B %d %Y')`"
+output: rmdformats::readthedown
 ---
+
+# Project Summary 
+
+# Data Description 
+
+# Project Roadmap 
