--- a/STA 325 Project Proposal.Rmd
+++ b/STA 325 Project Proposal.Rmd
@@ -5,7 +5,7 @@ date: "`r format(Sys.time(), '%B %d %Y')`"
 output: rmdformats::readthedown
 ---
 
-```{r}
+```{r warning=FALSE, message=FALSE}
 library(tidyverse)
 ```
 
