--- a/STA 325 Project Proposal.Rmd
+++ b/STA 325 Project Proposal.Rmd
@@ -4,58 +4,52 @@ author: "Ethan Shen, Steven Herrera, Malavi Ravindran, Austin Jia"
 date: "`r format(Sys.time(), '%B %d %Y')`"
 output: rmdformats::readthedown
 ---
-
+ 
 ```{r warning=FALSE, message=FALSE}
 library(tidyverse)
 library(rvest)
 ```
 
-# Project Summary 
+***
+
+# Executive Summary
 
 ## Key Project Objectives 
 
 
-## Project Plans
+## High-level Summary of Project Plans
 
 
-
-## Importance of this Project
+## Importance of this Project and Who Can Benefit From This
 
 
 ## Other Relevant Information 
 
-
+***
 
 # Data Description 
 
-```{r tweets-data, warning=FALSE, message=FALSE}
-tweets <- read_csv("tweet_global_warming.csv", col_names=TRUE) %>%
-  select(tweet, existence)
-tweets %>%
-  head(100)
-```
+## Data Sources
 
-## Data Source 
-
-We got the data from https://www.figure-eight.com/data-for-everyone/. 
-
+ 
 ## Predictors and Response
 
-We will be using the `tweet` column as our predictor. Our response variable will be `existence`. 
-
+ 
 ## Data Type 
 
-`tweet` is a column that contains various words and is unstructured in the sense that it does not fall into a specific variable category (it's not continuous or discrete). `existence` is a nominal categorical variable. 
-
+ 
 ## Data Scraping / Wrangling 
 
-We will be using various NLP techniques to transform the `tweet` column, such as determining word frequency (how often a word appears in these tweets), word length, lexical diversity (the number of unique words used in a tweet), and lexical density (the number of unique words divided by the total number of words for each tweet).
+*** 
 
 # Project Roadmap 
 
 ## Inference and Prediction Goals
 
+
 ## Modeling Strategies
 
+
 ## Selecting Good Model
+
 
