--- a/STA 325 Project Proposal.Rmd
+++ b/STA 325 Project Proposal.Rmd
@@ -18,13 +18,13 @@ According to US News' Education Rankings, North Carolina ranks **12th** for high
 
 ## Key Project Objectives 
 
-Our objectives are as follow: **(1)** develop a model to understand inference (and prioritize interpretability) among students that score high on the SAT, ACT, and AP exams; **(2)** complete K-fold cross-validation to determine the best model; and **(3)** predict and interpret whether there is a significant difference between binary explanatory variables using bootstrap simulations.
+Our objectives are as follow: **(1)** develop a model to understand inference (and prioritize interpretability) among schools that score high on the SAT, ACT, and NC school growth index; **(2)** complete K-fold cross-validation to determine the best model; and **(3)** predict and interpret whether there is a significant difference between binary explanatory variables using bootstrap simulations.
 
 ## High-level Summary of Project Plans
 
 In order to meet our objectives, we will follow these steps:
 
-  1. Complete necessary exploratory data analysis to understand key variables in our model to predict SAT, ACT, and AP exams, each.
+  1. Complete necessary exploratory data analysis to understand key variables in our model to predict SAT, ACT, and NC school growth index score, each.
  
   2. Fit several models, including, but not limited to, linear regression, ridge regression, polynomial regression, and splines.
   
@@ -36,7 +36,7 @@ In order to meet our objectives, we will follow these steps:
 
 ## Importance of this Project and Who Can Benefit From This
 
-As students that attend a private research university in North Carolina, a state with a rich and long history of putting education first (with key political figures like former Governor and US Senator Terry Sanford) and institutionalizing these accomplishments (with the development of eponymous associations like the Research Triangle), we believe making steps towards understanding the larger sociopolitical nuances of education data research, contextualizing this information, and disseminating it to our peers could make huge strides in contributing to local school district efforts to reach higher educational outcomes. We pride ourselves on being students that care about being leaders of the community, but we often fail to understand where those additional resources need to be allocated or what tangible efforts we can make to close the education gap. Nelson Mandela once said "Education is the most powerful weapon which you can use to change the world." If we can dedicate our knowledge of machine learning and data mining to something as important as education (especially in a state that does so much for us) by investing in our future, then we can begin to have these important conversations about our world's most difficult issues to solve, such as climate change.
+As students that attend a private research university in North Carolina, a state with a rich and long history of putting education first (with key political figures like former Governor and US Senator Terry Sanford) and institutionalizing these accomplishments (with the development of eponymous associations like the Research Triangle), we believe making steps towards understanding the larger sociopolitical nuances of education data research, contextualizing this information, and disseminating it to our peers could make huge strides in contributing to local school district efforts to reach higher educational outcomes. We pride ourselves on being students that care about being leaders of the community, but we often fail to understand where those additional resources need to be allocated or what tangible efforts we can make to close the education gap. Nelson Mandela once said "Education is the most powerful weapon which you can use to change the world." If we can dedicate our knowledge of machine learning and data mining to something as important as education (especially in a state that does so much for us) by investing in our future, then we can begin to have these important conversations about our world's most difficult issues to solve, such as climate change. Conducting our statistical analysis could bridge communication among Duke students to serve certain areas of NC through summer research experiences, education policy fellowships, and/or non-profit organization during-semester volunteering.
 
 ## Other Relevant Information 
 
@@ -48,17 +48,26 @@ Although hefty of a goal, we do aim to specify our problem much more as we explo
 
 ## Data Sources
 
-After considering many resources, we decided to reach out to the Carolina Population Center at UNC, in which we expressed our interests in data related to NC. Although we scheduled a meeting with them on November 15, we won't have enough time to fully go over the data sources necessary for the type of research we mentioned above in a timely manner, so we decided to just consider many things and debrief with them our findings. Here is the link for the publicly available data: [NC Public Schools Analysis and Reporting](http://www.ncpublicschools.org/accountability/reporting/). We will also be working with data only from the 2018-2019 school year, and, specifically, ACT data from the 2018 11th grade scores and the 2018 SAT scores in NC.
+After considering many resources, we decided to reach out to the Carolina Population Center at UNC, in which we expressed our interests in data related to NC. Although we scheduled a meeting with them on November 15, we won't have enough time to fully go over the data sources necessary for the type of research we mentioned above in a timely manner, so we decided to just consider many things and debrief with them our findings. Here is the link for the publicly available data: [NC Public Schools Analysis and Reporting](http://www.ncpublicschools.org/accountability/reporting/). We will also be working with data only from the 2018-2019 school year, and, specifically, ACT data from the 2018 11th grade scores and the [2018 SAT scores in NC](http://www.ncpublicschools.org/accountability/reporting/sat/).
  
 ## Predictors and Response
 
- 
-## Data Type 
+Here is an outline for each of our datasets and the model variable types we would explore:
 
+  1. SAT
+    - Response: `satScoreTotal`
+  
+  2. ACT
+    - Response: `benchmarkPercent`
+  
+  3. NC School Growth Index
+    - Response: `indexScore`
+    
+While we haven't yet joined our datasets, we plan on heavily using the `percentTested` and `numberTested` variables from the **SAT** dataset, the `region` and `categories` variables in the **ACT** dataset (`hurricaneDays` also shared with the Met dataset), and the `growthStatus` and `growthMet` variables from the **Met** dataset. Additionally, we would ideally combine data from the SAT and ACT datasets to focus on predicting the NC school growth index score, as this is considered the most important predictor of school success since the past year.
  
 ## Data Scraping / Wrangling 
 
-```{r warning = FALSE}
+```{r warning = FALSE, message = FALSE, echo = FALSE}
 sat_2018 <- read_csv("sat_2018.csv")
 
 sat <- sat_2018 %>%
@@ -73,7 +82,7 @@ sat <- sat_2018 %>%
   filter(!is.na(school))
 ```
 
-```{r warning = FALSE, message = FALSE}
+```{r warning = FALSE, message = FALSE, echo = FALSE}
 met_standards <- read_csv("met_standards.csv")
 
 met <- met_standards %>%
@@ -89,7 +98,7 @@ met <- met_standards %>%
          growthType, growthStatus, indexScore)
 ```
 
-```{r warning = FALSE}
+```{r warning = FALSE, message = FALSE, echo = FALSE}
 act_data <- read_csv("act_data.csv")
 
 act <- act_data %>%
@@ -104,6 +113,25 @@ act <- act_data %>%
          benchmarkPercent = as.double(`Percent Meeting Benchmark or Standard`)) %>%
   select(district, schoolCode, school, region,
          grades, hurricaneDays, categories, actType, benchmarkPercent)
+```
+
+Below, are just small glimpses of our three datasets we'll be using: `sat`, `act`, and `met`. We did a lot of wrangling to get the unstructured data to format neatly, and, with more time, will plan to join some of these datasets strategically, since they all share some variable names together.
+
+```{r}
+library(knitr)
+kable(sat %>% head(2))
+kable(act %>% head(2))
+kable(met %>% head(2))
+```
+
+## Data Type 
+
+Here, we laid out the data types for all variables in each dataset:
+
+```{r}
+kable(sapply(sat, typeof), format = "html", col.names = c("Type"))
+kable(sapply(act, typeof), format = "html", col.names = c("Type"))
+kable(sapply(met, typeof), format = "html", col.names = c("Type"))
 ```
 
 
