reshape data frame

--- a/asdf.Rmd
+++ b/asdf.Rmd
@@ -6,21 +6,26 @@ output: html_document
 ---
 
 ```{r}
-met_standards
+df <- read.csv("asdf.csv")
 
-```
 
-```{r}
-act
-inner_join(met_standards, act, by = c("Subgroup" = "categories", "School Code" = "schoolCode", "School Name" = "school", "District Name" = "district", "Grade Span" = "grades")) %>%
-  select("State Board Region", "Grade Span", "School Growth Status", "School Growth Index Score", "benchmarkPercent", "Subgroup", "School Name") %>%
-  select("School Growth Status", everything()) %>%
-  inner_join(sat, by = c("School Name" = "school"))
-```
 
-```{r}
-df <- read_csv("asdf.csv")
+df <- df %>%
+filter(!is.na(grade_span),
+       grade_span == "09-12", subject == "ACT" |
+         subject == "ACTEN" |subject == "ACTMA" | subject == "ACTRD" | subject == "ACTSC" |subject == "ACTWR")
 
 df
+
+reshape(df, idvar = "school_name", timevar = "subgroup", direction = "wide")
 ```
 
+Response: Growth score
+
+Covariates
+- Region (sbe_region)
+- title 1 status
+- Missed Days (?)
+- School Size
+- Percentage Subgroup
+- Percent ACT score met standard
