--- a/another_test.Rmd
+++ b/another_test.Rmd
@@ -9,12 +9,28 @@ output: html_document
 library(tidyverse)
 df <- read.csv("asdf.csv")
 
-df <- df %>%
+df_1 <- df %>%
   filter(!is.na(grade_span),
-         grade_span == "09-12") 
-reshape(df, idvar = "school_name", timevar = "subgroup", direction = "wide")
+         grade_span == "09-12") %>%
+  select(school_code, school_name, sbe_region, title_1, missed_days, subgroup, subject, den, total_pct, grade_span)
 
+df_2 <- reshape(df_1, idvar = "school_name", timevar = "subgroup", direction = "wide")
 
+df_2
+
+df_2$sbe
+
+colnames(df_2)
+colnames(df)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+Covariates
+- Region (sbe_region)
+- title 1 status
+- Missed Days (?)
+- Class Size
+- Percentage Subgroup
+
+- Percent ACT score met standard
