--- a/another_test.Rmd
+++ b/another_test.Rmd
@@ -78,9 +78,10 @@ title_1.df <- ACT %>%
   distinct(school_code, school_name, title_1) 
 
 title_1.df[] <- lapply(title_1.df, function(x) if(is.factor(x)) as.character(x) else x)
+```
 
 
-```{r}
+```{R}
 #FOR RACE
 school.codes <- unique(ACT$school_code)
 
@@ -307,9 +308,11 @@ final_school_data <- final_school_data %>%
     title_1 == "" ~ "N",
     TRUE ~ as.character(title_1)),
     percent_meeting = as.numeric(percent_meeting))
+sum(is.na(final_school_data$percent_swd))
 
 ```
 
+### Modeling 
 ```{r}
 # should we mean center percents? 
 model1 = lm(data = final_school_data, growth_index_score ~ .- growth_status - school_code - school_name)
@@ -320,6 +323,37 @@ summary(model1)
 summary(final_school_data$growth_index_score)
 ```
 
+
+### Imputation
+
+```{r}
+final_school_data[complete.cases(final_school_data), ]
+
+# Plot missing proportions
+missing.prop <- apply(final_school_data, MARGIN = 2, FUN = function(x) { sum(is.na(x)) })
+missing.prop <- missing.prop / dim(final_school_data)[1]
+
+missing.prop <- data.frame("prop" = missing.prop,
+                           "var" = names(final_school_data))
+
+ggplot(missing.prop, aes(x = reorder(var, -prop), y = prop)) + 
+  geom_bar(stat = "identity") +
+  theme(axis.text.x=element_text(angle=90,hjust=1,vjust=0.5)) + 
+  geom_col(colour = "black", fill = "#FF6666") + 
+  xlab("Covariate") + 
+  ylab("Proportion Missing") +
+  ggtitle("The Proportion of Missing Values for Each Covariate")
+
+sum(is.na(final_school_data))/(dim(final_school_data)[1] * dim(final_school_data)[2])
+
+final_school_data_imp <- parlmice(final_school_data, m=5, printFlag=FALSE, maxit = 5, 
+                cluster.seed=123, n.code = 2, cl.type = "FORK") 
+```
+
+We only have 390 complete cases. With such a limited sample size, we cannot afford to do complete case analysis. We do multiple imputation to handle missing data. 
+
+
+### Visualizations
 ```{r}
 ggplot(data = final_school_data %>% filter(!is.na(region)), aes(x = percent_white)) + 
   geom_histogram() + 
