--- a/another_test.Rmd
+++ b/another_test.Rmd
@@ -49,7 +49,6 @@ SCHOOLINFO <- SCHOOLINFO %>%
 ```{r}
 school_data <- read.csv("school_data.csv")
 
-
 school_data <- school_data %>%
   filter(!is.na(grade_span),
          grade_span == "09-12") 
@@ -67,6 +66,42 @@ Covariates
 - Percent ACT score met standard
 
 ```{r}
+ACTEN <- school_data %>%
+  filter(subject == "ACTEN", subgroup == "ALL") %>%
+  distinct(school_code, school_name, subject, total_pct) %>%
+  spread(subject, total_pct)
+
+ACTMA <- school_data %>%
+  filter(subject == "ACTMA", subgroup == "ALL") %>%
+  distinct(school_code, school_name, subject, total_pct) %>%
+  spread(subject, total_pct)
+
+ACTRD <- school_data %>%
+  filter(subject == "ACTRD", subgroup == "ALL") %>%
+  distinct(school_code, school_name, subject, total_pct) %>%
+  spread(subject, total_pct)
+
+
+ACTSC <- school_data %>%
+  filter(subject == "ACTSC", subgroup == "ALL") %>%
+  distinct(school_code, school_name, subject, total_pct) %>%
+  spread(subject, total_pct)
+
+
+ACTWR <- school_data %>%
+  filter(subject == "ACTWR", subgroup == "ALL") %>%
+  distinct(school_code, school_name, subject, total_pct) %>%
+  spread(subject, total_pct)
+
+en.ma <- merge(ACTEN, ACTMA, by = c("school_code", "school_name"), all = TRUE) 
+en.ma.rd <- merge(en.ma, ACTRD, by = c("school_code", "school_name"), all = TRUE) 
+en.ma.rd.sc <- merge(en.ma.rd, ACTSC, by = c("school_code", "school_name"), all = TRUE) 
+ACT.subjects <- merge(en.ma.rd.sc, ACTWR, by = c("school_code", "school_name"), all = TRUE) 
+ACT.subjects[] <- lapply(ACT.subjects, function(x) if(is.factor(x)) as.character(x) else x)
+
+```
+
+```{r}
 ACT <- school_data %>%
   filter(subject == "ACT") 
 
@@ -79,9 +114,6 @@ title_1.df <- ACT %>%
 
 title_1.df[] <- lapply(title_1.df, function(x) if(is.factor(x)) as.character(x) else x)
 ```
-
-```
-
 
 ```{R}
 #FOR RACE
@@ -298,10 +330,17 @@ race.gender.ed.disability <- merge(race.gender.ed, disability.data, by = c("scho
 
 race.gender.ed.disability.title_1 <- merge(race.gender.ed.disability, title_1.df, by = c("school_code", "school_name"), all = TRUE)
 
-final_school_data <- merge(race.gender.ed.disability.title_1, SCHOOLINFO, by = c("school_code", "school_name"), all = TRUE)
+race.gender.ed.disability.title_1.actsubjects <- merge(race.gender.ed.disability.title_1, ACT.subjects, by = c("school_code", "school_name"), all = TRUE)
+
+final_school_data <- merge(race.gender.ed.disability.title_1.actsubjects, SCHOOLINFO, by = c("school_code", "school_name"), all = TRUE)
 
 final_school_data <- final_school_data %>%
-  rename(percent_meeting = Percent.Meeting.Benchmark.or.Standard,
+  rename(percent_ACT_meeting = Percent.Meeting.Benchmark.or.Standard,
+         percent_ACTEN_meeting = ACTEN,
+         percent_ACTMA_meeting = ACTMA,
+         percent_ACTRD_meeting = ACTRD,
+         percent_ACTSC_meeting = ACTSC,
+         percent_ACTWR_meeting = ACTWR,
          missed_school_days = Missed.Days.due.to.Hurricane.Florence,
          region = State.Board.Region,
          growth_status = School.Growth.Status,
@@ -309,9 +348,12 @@ final_school_data <- final_school_data %>%
   mutate(title_1 = case_when(
     title_1 == "" ~ "N",
     TRUE ~ as.character(title_1)),
-    percent_meeting = as.numeric(percent_meeting))
-sum(is.na(final_school_data$percent_swd))
-
+    percent_ACT_meeting = as.numeric(percent_ACT_meeting),
+    percent_ACTEN_meeting = as.numeric(percent_ACTEN_meeting),
+    percent_ACTMA_meeting = as.numeric(percent_ACTMA_meeting),
+    percent_ACTRD_meeting = as.numeric(percent_ACTRD_meeting),
+    percent_ACTSC_meeting = as.numeric(percent_ACTSC_meeting),
+    percent_ACTWR_meeting = as.numeric(percent_ACTWR_meeting))
 ```
 
 ### Modeling 
@@ -349,7 +391,9 @@ ggplot(missing.prop, aes(x = reorder(var, -prop), y = prop)) +
 sum(is.na(final_school_data))/(dim(final_school_data)[1] * dim(final_school_data)[2])
 
 final_school_data_imp <- parlmice(final_school_data, m=5, printFlag=FALSE, maxit = 5, 
-                cluster.seed=123, n.code = 2, cl.type = "FORK") 
+                                  cluster.seed=123, n.code = 2, cl.type = "FORK") 
+
+someclownshit <- final_school_data_imp$data
 ```
 
 We only have 390 complete cases. With such a limited sample size, we cannot afford to do complete case analysis. We do multiple imputation to handle missing data. 
