--- a/another_test.Rmd
+++ b/another_test.Rmd
@@ -80,8 +80,6 @@ title_1.df <- ACT %>%
 title_1.df[] <- lapply(title_1.df, function(x) if(is.factor(x)) as.character(x) else x)
 ```
 
-```
-
 
 ```{R}
 #FOR RACE
@@ -314,17 +312,6 @@ sum(is.na(final_school_data$percent_swd))
 
 ```
 
-### Modeling 
-```{r}
-# should we mean center percents? 
-model1 = lm(data = final_school_data, growth_index_score ~ .- growth_status - school_code - school_name)
-
-summary(model1)
-
-
-summary(final_school_data$growth_index_score)
-```
-
 
 ### Imputation
 
@@ -350,6 +337,10 @@ sum(is.na(final_school_data))/(dim(final_school_data)[1] * dim(final_school_data
 
 final_school_data_imp <- parlmice(final_school_data, m=5, printFlag=FALSE, maxit = 5, 
                 cluster.seed=123, n.code = 2, cl.type = "FORK") 
+
+final_school_data_imp$data
+
+sum(is.na(final_school_data))/(dim(final_school_data)[1] * dim(final_school_data)[2])
 ```
 
 We only have 390 complete cases. With such a limited sample size, we cannot afford to do complete case analysis. We do multiple imputation to handle missing data. 
@@ -376,3 +367,13 @@ avg %>%
   spread(region, mean_percent_white)
 ```
 
+### Modeling 
+```{r}
+# should we mean center percents? 
+model1 = lm(data = final_school_data_imp, growth_index_score ~ .- growth_status - school_code - school_name)
+
+summary(model1)
+
+
+summary(final_school_data$growth_index_score)
+```
