--- a/Project Modeling.Rmd
+++ b/Project Modeling.Rmd
@@ -12,17 +12,53 @@ require(caTools)
 ```
 
 ```{r}
-school_df_final <- read.csv("school_df_final.csv")
+school_df_final <- read_csv("school_df_final.csv")
 ```
-
-
 
 ### Visualizations
 ```{r}
-ggplot(data = final_school_data %>% filter(!is.na(region)), aes(x = percent_white)) + 
-  geom_histogram() + 
-  facet_wrap(~region)
+ggplot(data = school_df_final %>% filter(!is.na(region)), aes(x = region, y = c(percent_white, percent_eds))) + 
+  geom_bar(stat= "identity") 
+
+
+
+yes <- school_df_final %>%
+  group_by(region) %>%
+  mutate(mean_percent_white = mean(percent_white, na.rm = TRUE),
+         mean_percent_male = mean(percent_male, na.rm = TRUE),
+         mean_percent_eds = mean(percent_eds, na.rm = TRUE),
+         mean_percen_swd = mean(percent_swd, na.rm = TRUE)) %>%
+  distinct(region, 
+           mean_percent_white,
+           mean_percent_male,
+           mean_percent_eds,
+           mean_percen_swd) 
+
+
+school_df_final %>%
+  gather(variable, value, -region) 
+
+school_df_final %>%
+  na.omit()
+
+%>%
+  ggplot(aes(x = region, y = value, fill = variable)) + 
+  geom_bar(stat = "identity", position = "dodge")
+  
+
+
+
+
+
+df9b %>% 
+  select(-cluster, -Frequency, -Total_Sales) %>% 
+  gather(variable, value, -CUST_REGION_DESCR) %>% 
+  ggplot(aes(x = CUST_REGION_DESCR, y = value, fill = variable)) +
+  geom_col() +
+  coord_flip() + 
+  theme(legend.position = "bottom")
 ```
+
 
 ```{r}
 avg <- final_school_data %>%
