--- a/Project Modeling.Rmd
+++ b/Project Modeling.Rmd
@@ -14,6 +14,8 @@ library(MASS)
 
 ```{r}
 school_df_final <- read_csv("school_df_final.csv")
+school_df_final <- school_df_final %>%
+  na.omit()
 ```
 
 ### Visualizations
