--- a/Project Modeling.Rmd
+++ b/Project Modeling.Rmd
@@ -19,62 +19,40 @@ school_df_final <- school_df_final %>%
 ```
 
 ### Visualizations
+
 ```{r}
-ggplot(data = school_df_final %>% filter(!is.na(region)), aes(x = region, y = c(percent_white, percent_eds))) + 
-  geom_bar(stat= "identity") 
-
-
-
-yes <- school_df_final %>%
+school_df_final %>%
   group_by(region) %>%
   mutate(mean_percent_white = mean(percent_white, na.rm = TRUE),
          mean_percent_male = mean(percent_male, na.rm = TRUE),
          mean_percent_eds = mean(percent_eds, na.rm = TRUE),
-         mean_percen_swd = mean(percent_swd, na.rm = TRUE)) %>%
+         mean_percent_swd = mean(percent_swd, na.rm = TRUE)) %>%
   distinct(region, 
            mean_percent_white,
            mean_percent_male,
            mean_percent_eds,
-           mean_percen_swd) 
-
-
-school_df_final %>%
-  gather(variable, value, -region) 
-
-school_df_final %>%
-  na.omit()
-
-%>%
-  ggplot(aes(x = region, y = value, fill = variable)) + 
-  geom_bar(stat = "identity", position = "dodge")
-  
-
-
-
-
-
-df9b %>% 
-  select(-cluster, -Frequency, -Total_Sales) %>% 
-  gather(variable, value, -CUST_REGION_DESCR) %>% 
-  ggplot(aes(x = CUST_REGION_DESCR, y = value, fill = variable)) +
-  geom_col() +
-  coord_flip() + 
-  theme(legend.position = "bottom")
+           mean_percent_swd) %>%
+  gather(variable, value, -region) %>%
+  ggplot(aes(x = region, y = value * 100, fill = reorder(variable, -value))) + 
+  geom_bar(stat = "identity", position = "dodge") + 
+  scale_fill_discrete(name = "Demographic Label", labels = c("White", "Male", "EDS", "SWD")) + 
+  labs(title = "Average Demographic Distribution by Region", 
+       x = "Region", 
+       y = "Percent") + 
+  theme_minimal() + 
+  ggpubr::rotate_x_text(angle = 50)
 ```
-
 
 ```{r}
-avg <- final_school_data %>%
-  group_by(region) %>%
-  mutate(mean_percent_white = mean(percent_white, na.rm=TRUE),
-         mean_percent_male = mean(percent_male, na.rm=TRUE),
-         mean_percent_eds = mean(percent_eds, na.rm=TRUE),
-         mean_percent_swd = mean(percent_swd, na.rm=TRUE))
-avg %>%
-  distinct(region, mean_percent_white) %>%
-  filter(!is.na(region)) %>%
-  spread(region, mean_percent_white)
+ggplot(school_df_final, aes(x = growth_index_score, fill = region)) + 
+  geom_histogram(binwidth = 0.9, show.legend = FALSE) + 
+  facet_wrap(~region, nrow = 4) + 
+  labs(title = "Histogram of Growth Index Score by Region", 
+       x = "Growth Index Score", 
+       y = "Count") +
+  theme_minimal() 
 ```
+
 
 ### Modeling 
 
